# DLC-WebUI

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Home.py  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
docs/api/: core.md  pages.md  utils.md
docs/guides/: faq.md  features.md  installation.md  quickstart.md
pages/: 1_Mouse_Scratch.py  2_Mouse_Grooming.py  3_Mouse_Swimming.py  4_Three_Chamber.py  5_Two_Social.py  6_Mouse_CPP.py  7_Video_Preparation.py  8_Video_Crop.py
src/: __init__.py
src/core/: __init__.py
src/core/components/: __init__.py  sidebar.py  styles.py
src/core/config/: __init__.py  config_manager.py
src/core/gpu/: gpu_selector.py  gpu_utils.py
src/core/helpers/: analysis_helper.py  download_utils.py  file_sorting.py  gpu_utilization.py  list_directories.py  video_combiner.py  video_helper.py
src/core/logging/: __init__.py  log_manager.py
src/core/processing/: __init__.py  mouse_cpp_video_processing.py  mouse_grooming_video_processing.py  mouse_scratch_video_processing.py  mouse_social_video_processing.py  mouse_swimming_video_processing.py  three_chamber_video_processing.py
src/core/utils/: __init__.py  execute_selected_scripts.py  file_utils.py  gpu_selector.py  gpu_utils.py
src/helpers/: analysis_helper.py  download_utils.py  file_sorting.py  gpu_utilization.py  list_directories.py  video_combiner.py
src/utils/: file_utils.py
tests/unit/: test_gpu_utils.py
(+20 files in other folders)
