[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlc-webui"
version = "1.0.0"
description = "Web Interface for Mouse Behavior Analysis Based on DeepLabCut"
authors = [
    {name = "Your Name", email = "your-email@example.com"},
]
dependencies = [
    "streamlit>=1.28.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "deeplabcut>=2.3.10",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.12.0",
    "pyyaml>=6.0.1",
    "GPUtil>=1.4.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/your-username/DLC-WebUI"
Documentation = "https://github.com/your-username/DLC-WebUI/docs"
Repository = "https://github.com/your-username/DLC-WebUI.git"
Issues = "https://github.com/your-username/DLC-WebUI/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=5.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
